# applemusic-mcp-server

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: auth.rs  main.rs  models.rs
src/services/: applemusic.rs  mod.rs
