[package]
name = "applemusic-mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = ["server", "transport-io"] }
tokio = { version = "1.29", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
url = "2.4"
jsonwebtoken = "9.2"
chrono = "0.4"
atty = "0.2"